fixed shifting body after open drawer

--- a/static/_layout/css/style.scss
+++ b/static/_layout/css/style.scss
@@ -13,21 +13,19 @@ html {
 	background-color: green;
 }
 
-.site-header {
-	color: $header-text;
-	background-color: $header-bg;
-}
-
 .mdl-layout__drawer-button {
 	color: rgba(0,0,0,0.3);
 }
 
-.site-header .mdl-layout__header-row {
+.site-header {
 	color: $header-text;
-}
+	background-color: $header-bg;
+	.mdl-layout__header-row {
 
-.site-header .mdl-navigation__link {
-	color: $header-text;
+	}
+	.mdl-navigation__link {
+		color: $header-text;
+	}
 }
 
 .aux {
